[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/chests/Chests.png" type="Texture" id=1]
[ext_resource path="res://objects/chest.gd" type="Script" id=2]
[ext_resource path="res://objects/silverCoin.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/chest_open.mp3" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 32, 48, 32 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 32, 48, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 38, 7.5 )

[node name="chest" type="Area2D"]
script = ExtResource( 2 )

[node name="silverCoin" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -11, -1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 5.96046e-08, -1.90735e-06 )
scale = Vector2( 1.46197, 1.46197 )
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -13, 7 )
shape = SubResource( 9 )

[node name="chestOpenSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="area_entered" from="." to="." method="_on_chest_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_chest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_chest_body_exited"]
